#set(-std=c++11 -lcpprest -lssl -lcrypto -lboost_system -lboost_thread-mt -lboost_chrono-mt -L/usr/local/Cellar/openssl\@1.1/1.1.1i/lib/)
option(BUILD_SHARED_LIBS "" ON)
set(project_BIN ${PROJECT_NAME})
set(project_LIB ${PROJECT_NAME}_LIB)
set(OPENSSL_ROOT_DIR "/usr/local/opt/openssl")
find_package(cpprestsdk REQUIRED)
find_package(AWSSDK REQUIRED COMPONENTS s3)
find_package(OpenSSL REQUIRED)
file(GLOB SOURCES *.h *.cpp)
add_library(${project_LIB} ${SOURCES})
add_executable(${project_BIN} ${SOURCES})
target_link_libraries(${project_LIB} cpprestsdk::cpprest ${OPENSSL_LIBRARIES} ${AWSSDK_LINK_LIBRARIES})
target_link_libraries(${project_BIN} ${project_LIB} )
